fixed footer - top height too high

--- a/webapp/static/aikif.css
+++ b/webapp/static/aikif.css
@@ -136,7 +136,7 @@ pre {
 	height: 28px;
 	width: 960px;	
 	float: left;
-	margin: 80px 0px 0px 0px; 
+	margin: 30px 0px 0px 0px; 
 	padding: 0px;
 	text-align: center;        
 }
